--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
  <head>
  </head>
  <body>
-   <h1>Hello World<h1>
-   <h1>Hello OriServer<h1>
+   <h1>Welcome to the Devops World<h1>
  </body>
 </html>
